force-app/main/default/objects/SharepointBidDateFolder__c/SharepointBidDateFolder__c.object-meta.xml
<CustomObject>
    <description>Object that tracks folders created in sharepoint for specific bid dates under opportunity</description>
    <label>Sharepoint Bid Date Folder</label>
    <nameField>
        <displayFormat>Bid Date-{0000}</displayFormat>
        <label>Sharepoint Bid Date Folder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sharepoint Bid Date Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>