force-app/main/default/objects/SharepointBidDateFolder__c/fields/Bid_Date_Sharepoint_Folder__c.field-meta.xml
<CustomField>
    <fullName>Bid_Date_Sharepoint_Folder__c</fullName>
    <label>Bid Date Sharepoint Folder</label>
    <type>Date</type>
</CustomField>