force-app/main/default/objects/SharepointBidDateFolder__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sharepoint Bid Date Folders</relationshipLabel>
    <relationshipName>Sharepoint_Bid_Date_Folders</relationshipName>
    <type>Lookup</type>
</CustomField>