force-app/main/default/objects/SharepointBidDateFolder__c/fields/Opportunity_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_RecordType__c</fullName>
    <label>Opportunity RecordType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>General Contracting</fullName>
            </value>
            <value>
                <fullName>MaRRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>